--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav class="main-nav">
             <ul id="nav-items">
-                <li id="nav-item"><a href="index.html" class="active">Home</a></li>
-                <li id="nav-item"><a href="pages/products.html">Products</a></li>
-                <li id="nav-item"><a href="pages/categories.html">Categories</a></li>
-                <li id="nav-item"><a href="pages/about.html">About Us</a></li>
-                <li id="nav-item"><a href="pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="index.html" class="active">Home</a></li>
+                <li class="nav-item"><a href="pages/products.html">Products</a></li>
+                <li class="nav-item"><a href="pages/categories.html">Categories</a></li>
+                <li class="nav-item"><a href="pages/about.html">About Us</a></li>
+                <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="cart-container">
