--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ShopEase - Your One-Stop Shop</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
 </ul>
         </nav>
-        
+
         <div class="cart-container">
             <div class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
