CU-868dp1zue - Add the correct quotations after "Enter your email" to show the correct placeholder text

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <h2>Subscribe to Our Newsletter</h2>
             <p>Get updates on new products, special offers, and more.</p>
             <form id="newsletter-form">
-                <input type="email" placeholder="Enter your email' required id="newsletter-email">
+                <input type="email" placeholder="Enter your email" required id="newsletter-email">
                 <button type="submit">Subscribe</button>
             </form>
             <div id="newsletter-success"></div>
