CU-868dp1yjt - Fill in the src and alt for the forth product card

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="" alt="Product 4">
+                    <img src="images/product4.jpg" alt="Product 4">
                 </div>
                 <div class="product-details">
                     <h3 class="product-title">Laptop Bag</h3>
