CU-868dp1zjb - Add a closing div tag before the category section tag

--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
                 <h3>Sports & Outdoors</h3>
                 <a href="pages/categories.html#sports" class="category-link">View All</a>
         </div>
+</div>
     </section>
+
 
     <section class="newsletter">
         <div class="newsletter-content">
