CU-868dquf21 - Start a shop grid with a right sidebar

--- a/pages/products.html
+++ b/pages/products.html
@@ -17,10 +17,12 @@
   </head>
 
   <body>
+    <!-- Header -->
     <header>
       <div class="logo-container">
         <img src="/images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
       </div>
+      <!-- Navigation -->
       <nav class="main-nav">
         <ul id="nav-items">
           <li class="nav-item"><a href="/" class="active">Home</a></li>
@@ -50,6 +52,331 @@
       </div>
     </header>
 
+    <!-- Hero Slider -->
+
+    <!-- Right Sidebar -->
+    <div class="main-sideber">
+      <div class="single-sidebar-widget-1">
+        <div>
+          <h5>price filter</h5>
+        </div>
+        <div>
+          <div class="slider">
+            <div></div>
+          </div>
+          <div class="range-input">
+            <input
+              type="range"
+              class="range-min"
+              min="0"
+              max="10000"
+              value="2500"
+            />
+            <input
+              type="range"
+              class="range-max"
+              min="100"
+              max="10000"
+              value="7500"
+            />
+          </div>
+          <div>
+            <div>
+              <div class="field">
+                <span>$</span>
+                <input type="number" class="input-min" value="95" />
+              </div>
+              <div class="separators">-</div>
+              <div class="field">
+                <span>$</span>
+                <input type="number" class="input-max" value="2500" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h5>Product Status</h5>
+        </div>
+        <div class="product-list">
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> On sale </span>
+            </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span>
+                <input type="checkbox" checked="checked" />
+                <span></span>
+              </span>
+              <span> In stock </span>
+            </span>
+          </label>
+        </div>
+      </div>
+      <div class="single-sidebar-widget-1">
+        <div class="courses-list">
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span>
+                <span class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </span>
+                <span>(22)</span>
+              </span>
+            </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span>
+                <span class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star color-2"></i>
+                </span>
+                <span>(15)</span>
+              </span>
+            </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span>
+                <span class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                </span>
+                <span>(03)</span>
+              </span>
+            </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span class="text-color">
+                <span class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                </span>
+                <span class="ratting-text">(00)</span>
+              </span>
+            </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmarkr"></span>
+              </span>
+              <span>
+                <span class="star">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                  <i class="fas fa-star color-2"></i>
+                </span>
+                <span>(00)</span>
+              </span>
+            </span>
+          </label>
+        </div>
+      </div>
+      <div class="single-sidebar-widget-2">
+        <div>
+          <h5>Categories</h5>
+        </div>
+        <div class="widget-categories">
+          <ul>
+            <li><a href="product-details.html">Leather</a><span>10</span></li>
+            <li>
+              <a href="product-details.html">Classic Watch</a><span>28</span>
+            </li>
+            <li>
+              <a href="product-details.html">Leather Man Wacth</a
+              ><span>12</span>
+            </li>
+            <li>
+              <a href="product-details.html">Trending Watch</a><span>17</span>
+            </li>
+            <li><a href="product-details.html">Google</a><span>22</span></li>
+            <li>
+              <a href="product-details.html">Woman Wacth</a><span>14</span>
+            </li>
+            <li><a href="product-details.html">Tables</a><span>19</span></li>
+            <li>
+              <a href="product-details.html">ShopEngine</a><span>29</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="single-sidebar-widget-2">
+        <div>
+          <h5>Filter by Color</h5>
+        </div>
+        <div class="list">
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" checked="checked" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Red </span>
+            </span>
+            <span class="text"> 8 </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Dark Blue </span>
+            </span>
+            <span class="text"> 14 </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Orange </span>
+            </span>
+            <span class="text"> 18 </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Purple </span>
+            </span>
+            <span class="text"> 23 </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Yellow </span>
+            </span>
+            <span class="text"> 17 </span>
+          </label>
+          <label class="checkbox-single">
+            <span>
+              <span class="checkbox-area">
+                <input type="checkbox" />
+                <span class="checkmark"></span>
+              </span>
+              <span> Green </span>
+            </span>
+            <span class="text"> 15 </span>
+          </label>
+        </div>
+      </div>
+      <div class="single-sidebar-widget-2">
+        <div class="wid-title">
+          <h5>Popular Brands</h5>
+        </div>
+        <div class="brand-post">
+          <div class="brand-item">
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+          </div>
+          <div class="brand-item">
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+          </div>
+          <div class="brand-item">
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+            <div class="brand-image">
+              <img src="#" alt="img" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Shop Grid -->
+    <div class="shop-grid">
+      <div class="shop-grid-card">
+        <div class="shop-card-image">
+          <img src="../images/products/1.jpg" alt="Product 1" />
+          <div class="shop-card-icon">
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </div>
+        <div class="product-details">
+          <h3 class="product-title">Laptop Bag</h3>
+          <div class="product-price">
+            <span class="current-price">$49.99</span>
+          </div>
+          <div class="product-rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <span class="rating-count">(35)</span>
+          </div>
+          <button
+            class="add-to-cart-btn"
+            data-product-id="4"
+            data-product-name="Laptop Bag"
+            data-product-price="49.99"
+          >
+            Add to Cart
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
     <footer>
       <div class="footer-columns">
         <div class="footer-column">
