--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <!-- Product 1 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="images/product1.jpg" alt="Product 1" />
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
             <div class="product-tag">Sale</div>
           </div>
           <div class="product-details">
