CU-868dta8hm - Add a photo for smart watch

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         <!-- Product 2 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="images/product2.jpg" alt="Product 2" />
+            <img
+              src="https://images.unsplash.com/photo-1696688713460-de12ac76ebc6?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 2"
+            />
           </div>
           <div class="product-details">
             <h3 class="product-title">Smart Watch</h3>
