CU-868dta8k5 - Add a photo for bluetooth speaker

--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
         <!-- Product 3 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="images/product3.jpg" alt="Product 3" />
+            <img
+              src="https://images.unsplash.com/photo-1675319245480-215961c129f1?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 3"
+            />
             <div class="product-tag">New</div>
           </div>
           <div class="product-details">
