CU-868dta8m1 - Add a photo for Laptop bag

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
         <!-- Product 4 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="images/product4.jpg" alt="Product 4" />
+            <img
+              src="https://images.unsplash.com/photo-1622560481979-f5b0174242a0?q=80&w=2788&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 4"
+            />
           </div>
           <div class="product-details">
             <h3 class="product-title">Laptop Bag</h3>
