CU-868dtaa3p - Find a photo for electronics category

--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
       <h2>Shop by Category</h2>
       <div class="category-grid">
         <div class="category-card">
-          <img src="images/category1.jpg" alt="Electronics Category" />
+          <img
+            src="https://images.unsplash.com/photo-1515940175183-6798529cb860?q=80&w=2829&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Electronics Category"
+          />
           <h3>Electronics</h3>
           <a href="pages/categories.html#electronics" class="category-link"
             >View All</a
