CU-868dtaa8u - Add a photo for clothing category

--- a/index.html
+++ b/index.html
@@ -201,7 +201,10 @@
           >
         </div>
         <div class="category-card">
-          <img src="images/category2.jpg" alt="Clothing Category" />
+          <img
+            src="https://images.unsplash.com/photo-1666358052008-a9a1ecda7885?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Clothing Category"
+          />
           <h3>Clothing</h3>
           <a href="pages/categories.html#clothing" class="category-link"
             >View All</a
