CU-868dtaa9n - Add a category photo for home category

--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
           >
         </div>
         <div class="category-card">
-          <img src="images/category3.jpg" alt="Home & Kitchen Category" />
+          <img
+            src="https://cdn.pixabay.com/photo/2021/12/22/02/56/interior-6886565_1280.jpg"
+            alt="Home & Kitchen Category"
+          />
           <h3>Home & Kitchen</h3>
           <a href="pages/categories.html#home" class="category-link"
             >View All</a
