CU-868dtab71 - Add a photo for sports category

--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
           >
         </div>
         <div class="category-card">
-          <img src="images/category4.jpg" alt="Sports & Outdoors Category" />
+          <img
+            src="https://images.unsplash.com/photo-1642326828805-0d3251cc250f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Sports & Outdoors Category"
+          />
           <h3>Sports & Outdoors</h3>
           <a href="pages/categories.html#sports" class="category-link"
             >View All</a
