CU-868dtgtj1 - Change up the product card to match the index.html

--- a/pages/products.html
+++ b/pages/products.html
@@ -344,38 +344,43 @@
 
     <!--Shop Grid -->
     <div class="shop-grid">
-      <div class="shop-grid-card">
-        <div class="shop-card-image">
-          <img src="../images/products/1.jpg" alt="Product 1" />
-          <div class="shop-card-icon">
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
-          </div>
+      <div class="product-card">
+        <div class="product-image">
+          <img
+            src="https://images.unsplash.com/photo-1675319245480-215961c129f1?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Product 3"
+          />
+          <div class="product-tag">New</div>
+        </div>
+        <div class="shop-card-icon">
+          <i class="fa-solid fa-heart"></i>
+          <i class="fa-solid fa-cart-shopping"></i>
         </div>
         <div class="product-details">
-          <h3 class="product-title">Laptop Bag</h3>
+          <h3 class="product-title">Bluetooth Speaker</h3>
           <div class="product-price">
-            <span class="current-price">$49.99</span>
+            <span class="current-price">$79.99</span>
           </div>
           <div class="product-rating">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <span class="rating-count">(35)</span>
+            <i class="fas fa-star-half-alt"></i>
+            <i class="far fa-star"></i>
+            <span class="rating-count">(17)</span>
           </div>
           <button
             class="add-to-cart-btn"
-            data-product-id="4"
-            data-product-name="Laptop Bag"
-            data-product-price="49.99"
+            data-product-id="3"
+            data-product-name="Bluetooth Speaker"
+            data-product-price="79.99"
           >
             Add to Cart
           </button>
         </div>
       </div>
     </div>
+
     <!-- Footer -->
     <footer>
       <div class="footer-columns">
