--- a/pages/products.html
+++ b/pages/products.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
     <link rel="stylesheet" href="../css/shop-sidebar.css" />
+    <link rel="stylesheet" href="../css/products.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <script src="../js/main.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
+    <script src="../js/cart.js" async defer></script>
   </head>
 
   <body>
