CU-868dquf21 - Build shop grid js

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               class="add-to-cart-btn"
               data-product-id="2"
               data-product-name="Smart Watch"
+              data-product-price="199.99"
             >
               Add to Cart
             </button>
