--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -7,15 +7,12 @@
     <title>Product Detail - ShopEase</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
-    <link rel="stylesheet" href="../css/product-detail.css">
-    <!-- Intentional bug: Font awesome link is broken -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <!-- Intentional bug: incorrect relative path for the logo -->
-            <img src="images/logo.png" alt="ShopEase Logo" class="logo">
+            <img src="../images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo">
         </div>
         <nav class="main-nav">
             <ul id="nav-items">
