CU-868dthwc5 - missing data-product-price attribute

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -103,7 +103,7 @@
             </div>
             <div class="purchase-actions">
                 <!-- Intentional bug: missing data-product-price attribute -->
-                <button id="add-to-cart" class="add-to-cart-btn" data-product-id="1" data-product-name="Wireless Headphones">Add to Cart</button>
+                <button id="add-to-cart" class="add-to-cart-btn" data-product-id="1" data-product-name="Wireless Headphones" data-product-price="99.99">Add to Cart</button>
                 <button id="buy-now" class="buy-now-btn">Buy Now</button>
                 <button id="add-to-wishlist" class="wishlist-btn">
                     <i class="far fa-heart"></i>
