CU-868dthwhx - Unclosed class "tabs-content" div

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -102,7 +102,6 @@
                 </div>
             </div>
             <div class="purchase-actions">
-                <!-- Intentional bug: missing data-product-price attribute -->
                 <button id="add-to-cart" class="add-to-cart-btn" data-product-id="1" data-product-name="Wireless Headphones" data-product-price="99.99">Add to Cart</button>
                 <button id="buy-now" class="buy-now-btn">Buy Now</button>
                 <button id="add-to-wishlist" class="wishlist-btn">
@@ -123,7 +122,6 @@
 
     <section class="product-tabs">
         <div class="tabs-header">
-            <!-- Intentional bug: missing data-tab attribute on one tab -->
             <button class="tab-btn active" data-tab="description">Description</button>
             <button class="tab-btn" data-tab="specifications">Specifications</button>
             <button class="tab-btn">Reviews</button>
@@ -304,6 +302,7 @@
                     <!-- Intentional bug: missing contact information for warranty claims -->
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
