CU-868dthx3z - Added product cards to the empty section recently viewed section with no content

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -485,7 +485,71 @@
     </section>
 
     <section class="recently-viewed">
-      <!-- Intentional bug: empty section with no content -->
+      <h2>You Recently Viewed</h2>
+      <div class="product-grid">
+        <div class="product-card">
+          <div class="product-image">
+            <img src="../images/product2.jpg" alt="Smart Watch" />
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Smart Watch</h3>
+            <div class="product-price">
+              <span class="current-price">$199.99</span>
+            </div>
+            <button class="quick-view-btn">Quick View</button>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="2"
+              data-product-name="Smart Watch"
+              data-product-price="199.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="product-image">
+            <img src="../images/product3.jpg" alt="Bluetooth Speaker" />
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Bluetooth Speaker</h3>
+            <div class="product-price">
+              <span class="current-price">$79.99</span>
+            </div>
+            <button class="quick-view-btn">Quick View</button>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="3"
+              data-product-name="Bluetooth Speaker"
+              data-product-price="79.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="product-image">
+            <img src="../images/product4.jpg" alt="Laptop Bag" />
+          </div>
+          <div class="product-details">
+            <h3 class="product-title">Laptop Bag</h3>
+            <div class="product-price">
+              <span class="current-price">$49.99</span>
+            </div>
+            <button class="quick-view-btn">Quick View</button>
+            <button
+              class="add-to-cart-btn"
+              data-product-id="4"
+              data-product-name="Laptop Bag"
+              data-product-price="49.99"
+            >
+              Add to Cart
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
