CU-868dttqza - Change color scheme;CU-868dtgtj1 - Change up the product card to match the index.html

--- a/pages/products.html
+++ b/pages/products.html
@@ -18,6 +18,7 @@
     <script src="../js/main.js" async defer></script>
     <script src="../js/products.js" async defer></script>
     <script src="../js/cart.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
   </head>
 
   <body>
@@ -325,68 +326,41 @@
             </label>
           </div>
         </div>
-        <div class="single-sidebar-widget-2">
-          <div class="wid-title">
-            <h5>Popular Brands</h5>
-          </div>
-          <div class="brand-post">
-            <div class="brand-item">
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-            </div>
-            <div class="brand-item">
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-            </div>
-            <div class="brand-item">
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-              <div class="brand-image">
-                <img src="#" alt="img" />
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
 
       <!--Shop Grid -->
-      <div class="shop-grid">
+      <div class="product-grid">
         <div class="product-card">
           <div class="product-image">
-            <img src="#" alt="Product 3" />
-            <div class="product-tag"></div>
-          </div>
-          <div class="shop-card-icon">
-            <i class="fa-solid fa-heart"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <img
+              src="https://images.unsplash.com/photo-1657223144998-e5aa4fa2db7c?q=80&w=2730&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Product 1"
+            />
+            <div class="product-tag">Sale</div>
           </div>
           <div class="product-details">
-            <h3 class="product-title"></h3>
+            <h3 class="product-title">Wireless Headphones</h3>
             <div class="product-price">
-              <span class="current-price"></span>
+              <span class="original-price">$120</span>
+              <span class="sale-price">99.99</span>
+            </div>
+            <div class="shop-card-icon">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-cart-shopping"></i>
             </div>
             <div class="product-rating">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
               <i class="fas fa-star-half-alt"></i>
-              <i class="far fa-star"></i>
-              <span class="rating-count"></span>
+              <span class="rating-count">(42)</span>
             </div>
             <button
               class="add-to-cart-btn"
-              data-product-id="3"
-              data-product-name="Bluetooth Speaker"
-              data-product-price="79.99"
+              data-product-id="1"
+              data-product-name="Wireless Headphones"
+              data-product-price="99.99"
             >
               Add to Cart
             </button>
