--- a/pages/categories.html
+++ b/pages/categories.html
@@ -6,16 +6,67 @@
     <title>Categories</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
-
-    <script src="" async defer></script>
+    <header>
+      <div class="logo-container">
+        <img src="images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
+      </div>
+      <nav class="main-nav">
+        <ul id="nav-items">
+          <li class="nav-item"><a href="index.html" class="active">Home</a></li>
+          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item">
+            <a href="pages/categories.html">Categories</a>
+          </li>
+          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
+          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="cart-container">
+        <div class="cart-icon">
+          <i class="fas fa-shopping-cart"></i>
+          <span class="cart-count">0</span>
+        </div>
+        <div class="cart-dropdown" style="display: none">
+          <div class="cart-items">
+            <!-- Cart items will be added here by JavaScript -->
+          </div>
+          <div class="cart-total">
+            <p>Total: $<span id="cart-total-amount">0.00</span></p>
+          </div>
+          <button class="checkout-btn">Checkout</button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="categories">
+        <h1>Categories</h1>
+        <div class="category-grid">
+          <div class="category-card">
+            <img src="images/category1.jpg" alt="Category 1" />
+            <h3>Electronics</h3>
+          </div>
+          <div class="category-item">
+            <img src="images/category2.jpg" alt="Category 2" />
+            <h3>Fashion</h3>
+          </div>
+          <div class="category-item">
+            <img src="images/category3.jpg" alt="Category 3" />
+            <h3>Home & Garden</h3>
+          </div>
+          <div class="category-item">
+            <img src="images/category4.jpg" alt="Category 4" />
+            <h3>Sports</h3>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
