--- a/pages/categories.html
+++ b/pages/categories.html
@@ -6,17 +6,23 @@
     <title>Categories</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="../css/shop-sidebar.css" />
+    <link rel="stylesheet" href="../css/products.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <script src="../js/main.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
+    <script src="../js/cart.js" async defer></script>
+    <script src="../js/products.js" async defer></script>
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img src="images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
+        <img src="/images/ShopEase-logo.svg" alt="ShopEase Logo" class="logo" />
       </div>
       <nav class="main-nav">
         <ul id="nav-items">
@@ -50,19 +56,19 @@
         <h1>Categories</h1>
         <div class="category-grid">
           <div class="category-card">
-            <img src="images/category1.jpg" alt="Category 1" />
+            <img src="/images/100x100px.png" alt="Category 1" />
             <h3>Electronics</h3>
           </div>
-          <div class="category-item">
-            <img src="images/category2.jpg" alt="Category 2" />
-            <h3>Fashion</h3>
+          <div class="category-card">
+            <img src="/images/100x100px.png" alt="Category 2" />
+            <h3>Clothing</h3>
           </div>
-          <div class="category-item">
-            <img src="images/category3.jpg" alt="Category 3" />
+          <div class="category-card">
+            <img src="/images/100x100px.png" alt="Category 3" />
             <h3>Home & Garden</h3>
           </div>
-          <div class="category-item">
-            <img src="images/category4.jpg" alt="Category 4" />
+          <div class="category-card">
+            <img src="/images/100x100px.png" alt="Category 4" />
             <h3>Sports</h3>
           </div>
         </div>
