--- a/pages/categories.html
+++ b/pages/categories.html
@@ -27,12 +27,12 @@
       <nav class="main-nav">
         <ul id="nav-items">
           <li class="nav-item"><a href="index.html" class="active">Home</a></li>
-          <li class="nav-item"><a href="pages/products.html">Products</a></li>
+          <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
-            <a href="pages/categories.html">Categories</a>
+            <a href="categories.html">Categories</a>
           </li>
-          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
-          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+          <li class="nav-item"><a href="about.html">About Us</a></li>
+          <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="cart-container">
@@ -51,7 +51,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="container">
       <section class="categories">
         <h1>Categories</h1>
         <div class="category-grid">
