--- a/pages/products.html
+++ b/pages/products.html
@@ -33,10 +33,10 @@
           <li class="nav-item"><a href="/" class="active">Home</a></li>
           <li class="nav-item"><a href="products.html">Products</a></li>
           <li class="nav-item">
-            <a href="pages/categories.html">Categories</a>
+            <a href="categories.html">Categories</a>
           </li>
-          <li class="nav-item"><a href="pages/about.html">About Us</a></li>
-          <li class="nav-item"><a href="pages/contact.html">Contact</a></li>
+          <li class="nav-item"><a href="about.html">About Us</a></li>
+          <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 
@@ -375,8 +375,8 @@
         <div class="footer-column">
           <h3>Shop</h3>
           <ul>
-            <li><a href="pages/products.html">All Products</a></li>
-            <li><a href="pages/categories.html">Categories</a></li>
+            <li><a href="products.html">All Products</a></li>
+            <li><a href="categories.html">Categories</a></li>
             <li><a href="pages/deals.html">Deals</a></li>
             <li><a href="pages/new-arrivals.html">New Arrivals</a></li>
           </ul>
@@ -384,7 +384,7 @@
         <div class="footer-column">
           <h3>Customer Service</h3>
           <ul>
-            <li><a href="pages/contact.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="pages/faq.html">FAQ</a></li>
             <li><a href="pages/shipping.html">Shipping & Returns</a></li>
             <li><a href="pages/terms.html">Terms & Conditions</a></li>
@@ -393,8 +393,8 @@
         <div class="footer-column">
           <h3>About Us</h3>
           <ul>
-            <li><a href="pages/about.html">Our Story</a></li>
-            <li><a href="pages/blog.html">Blog</a></li>
+            <li><a href="about.html">Our Story</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="pages/careers.html">Careers</a></li>
             <li><a href="pages/partners.html">Partners</a></li>
           </ul>
